Дополнены типы повреждений #36

--- a/src/Rottenwood/UtopiaMudBundle/Resources/types/damagetypes.yml
+++ b/src/Rottenwood/UtopiaMudBundle/Resources/types/damagetypes.yml
@@ -7,14 +7,14 @@
 #########
 
 damagetypes:
-    acid: ["", "", ""]
+    acid: ["поразил кислотой", "поразила кислотой", "поразило кислотой"]
     beat: ["ударил", "ударила", "ударило"]
     blast: ["разнес", "разнесла", "разнесло"]
     bite: ["укусил", "укусила", "укусило"]
-    butt: ["боднул", "боднула", "боднуло"]
+    bunt: ["боднул", "боднула", "боднуло"]
     claw: ["исполосовал", "исполосовала", "исполосавало"]
     crush: ["сокрушил", "сокрушила", "сокрушило"]
-    charge: ["", "", ""]
+    charge: ["ударил с разбега", "ударила с разбега", "ударило с разбега"]
     cleave: ["рассек", "рассекла", "рассекло"]
     chop: ["рубанул", "рубанула", "рубануло"]
     chomp: ["грызанул", "грызанула", "грызануло"]
@@ -22,10 +22,10 @@ damagetypes:
     digestion: ["переварил", "переварила", "переварило"]
     divine: ["поразил древней силой", "поразила древней силой", "поразило древней силой"]
     drain: ["истощил", "истощила", "истощило"]
-    electro: ["", "", ""]
-    flame: ["поджег", "поджегла", "поджегло"]
+    electro: ["поразил электричеством", "поразила электричеством", "поразило электричеством"]
+    flame: ["поджег", "подожгла", "подожгло"]
     freeze: ["заморозил", "заморозила", "заморозило"]
-    grep: ["", "", ""]
+    grab: ["обхватил", "обхватила", "обхватило"]
     hit: ["ударил", "ударила", "ударило"]
     jab: ["пырнул", "пырнула", "пырнуло"]
     kick: ["лягнул", "лягнула", "лягнуло"]
@@ -34,20 +34,21 @@ damagetypes:
     poke: ["ткнул", "ткнула", "ткнуло"]
     pound: ["растер", "растерла", "растерло"]
     pierce: ["уколол", "уколола", "укололо"]
-    punch: ["огрел", "огрела", "огрело"]
+    punch: ["ударил кулаком", "ударила кулаком", "ударило кулаком"]
     shot: ["подстрелил", "подстрелила", "подстрелило"]
     slash: ["резанул", "резанула", "резануло"]
     slice: ["порезал", "порезала", "порезало"]
     stab: ["вонзил", "вонзила", "вонзило"]
-    suction: ["засосал", "засосала", "засосало"]
+    suction: ["высосал", "высосала", "высосало"]
     slap: ["шлепнул", "шлепнула", "шлепнуло"]
     scratch: ["оцарапал", "оцарапала", "оцарапало"]
     sting: ["ужалил", "ужалила", "ужалило"]
-    shock: ["сотряс", "сотрясла", "сотрясло"]
+    shock: ["шокировал", "шокировала", "шокировало"]
+    shake: ["сотряс", "сотрясла", "сотрясло"]
     smash: ["разгромил", "разгромила", "разгромило"]
-    slime: ["", "", ""]
+    slime: ["нанес урон слизью", "нанесла урон слизью", "нанесло урон слизью"]
     tear: ["ободрал", "ободрала", "ободрало"]
     thrust: ["толкнул", "толкнула", "толкнуло"]
-    thwack: ["", "", ""]
+    thwack: ["заколотил", "заколотила", "заколотило"]
     whip: ["хлестнул", "хлестнула", "хлестнуло"]
-    wrath: ["", "", ""]
+    wrath: ["поразил гневом", "поразила гневом", "поразило гневом"]
