--- a/src/Rottenwood/UtopiaMudBundle/Resources/config/commands.yml
+++ b/src/Rottenwood/UtopiaMudBundle/Resources/config/commands.yml
@@ -66,3 +66,11 @@ commands:
         - say
         - сказать
         - произнести
+    shout:
+        type: action
+        alias:
+        - shout
+        - yell
+        - кричать
+        - крикнуть
+        - орать
