Добавлен общий для всего мира чат-канал #33

--- a/src/Rottenwood/UtopiaMudBundle/Resources/config/commands.yml
+++ b/src/Rottenwood/UtopiaMudBundle/Resources/config/commands.yml
@@ -60,6 +60,14 @@ commands:
         - импорт
 
     # Чат
+    chat:
+        type: action
+        alias:
+        - chat
+        - ooc
+        - чат
+        - болтать
+        - ооц
     say:
         type: action
         alias:
