Реализована команда 'who' отображающая список игроков онлайн #39

--- a/src/Rottenwood/UtopiaMudBundle/Resources/config/commands.yml
+++ b/src/Rottenwood/UtopiaMudBundle/Resources/config/commands.yml
@@ -45,6 +45,14 @@ commands:
         - смотреть
         - взглянуть
 
+    # Список игроков онлайн
+    who:
+        type: action
+        alias:
+        - who
+        - кто
+        - онлайн
+
     # Выход из игры
     quit:
         type: system
