--- a/src/Rottenwood/UtopiaMudBundle/Resources/zones/medievaltown/rooms.yml
+++ b/src/Rottenwood/UtopiaMudBundle/Resources/zones/medievaltown/rooms.yml
@@ -231,6 +231,7 @@ rooms:
         type: town
         exits:
             east: weststreet4
+            west: castle14
 
     house1:
         name: "Дом аристократа"
@@ -253,3 +254,215 @@ rooms:
         type: town
         exits:
             north: eaststreet1
+
+    castle14:
+        name: "Около восточных ворот"
+        desc: "Здесь центральная площадь крепости окружающая главную башню продолжается на север и на юг, на востоке находятся окруженные сторожевыми башнями ворота в крепость, а на западе высокая стена глазеющая на вас многочисленными бойницами."
+        type: town
+        exits:
+            east: bridge
+            north: castle9
+            south: castle19
+
+    castle9:
+        name: "У крепостной стены"
+        desc: "Вы находитесь на центральной площади крепости у ее восточной стены, по которой время от времени проходят патрули защитников крепости. На севере, в углу площади одиноко примостилась небольшая палатка из синего брезента, расшитого золотыми звездами. Площадь же продолжается дальше на запад и юг."
+        type: town
+        exits:
+            south: castle14
+            north: castle4
+            west: castle8
+
+    castle4:
+        name: "Магическая лавка"
+        desc: "Вы зашли в небольшую палатку из синего с золотыми звездами брезента, где за широким буковым столом ученик мага продает всевозможные волшебные принадлежности. Тут есть и свитки с редкими заклинаниями и магические реагенты, которые пригодятся в любом сверхъестественном начинании."
+        type: inside
+        exits:
+            south: castle9
+            west: castle3
+
+    castle8:
+        name: "Площадь у главной башни"
+        desc: "Тут центральная площадь крепости, продолжающаяся на север, восток и запад упирается в кажущиеся неприступными стены главной башни, где располагается местное командование. Это место крайне неудобно для атакующих крепость, так как в любой момент сверху может политься горящее масло или кипящая вода, а укрыться тут негде."
+        type: town
+        exits:
+            east: castle9
+            north: castle3
+            west: castle7
+
+    castle3:
+        name: "У крепостной стены"
+        desc: "Вы находитесь на центральной площади крепости у ее северной стены, по которой время от времени проходят патрули защитников крепости. На востоке, в углу площади одиноко примостилась небольшая палатка из синего брезента, расшитого золотыми звездами. Площадь же продолжается дальше на запад и юг."
+        type: town
+        exits:
+            east: castle4
+            south: castle8
+            west: castle2
+
+    castle7:
+        name: "Площадь у главной башни"
+        desc: "Здесь, в самом центре крепости обычно полно крестьян да простых ремесленников, съезжающихся сюда со всех окрестных земель для торговли и общения. Несмотря на то, что здесь собирается разношерстный народ, о каких-нибудь преступлениях тут сроду не слыхивали, так как от всевидящего ока гвардейцев крепости ничего не скроешь."
+        type: town
+        exits:
+            east: castle8
+            north: castle2
+            west: castle6
+
+    castle2:
+        name: "Около северных ворот"
+        desc: "Здесь центральная площадь крепости, продолжающаяся на запад, восток и юг, заканчивается у северных врат, за которыми начинается холмистая равнина. Так как времена нынче не спокойные, высовываться туда стоит лишь с группой товарищей, либо же лучше остаться тут внутри, под защитой гвардейцев крепости."
+        type: town
+        exits:
+            east: castle3
+            south: castle7
+            west: castle1
+
+    castle6:
+        name: "Площадь у главной башни"
+        desc: "Вы находитесь в северо-западной части центральной площади, окружающей главную башню, из которой осуществляется командование крепостью. Путь на юге преграждает неприступная гранитная стена, из многочисленных бойниц которой, в случае необходимости, будет выпущена туча стрел. Так что смельчакам осмелившимся попытаться захватить эту крепость не позавидуешь."
+        type: town
+        exits:
+            east: castle7
+            north: castle1
+            west: castle5
+
+    castle1:
+        name: "У крепостной стены"
+        desc: "Вы стоите перед небольшим квадратным зданием с толстыми стенами, на котором висит вывеска "банк". Путь на север преграждают высокие неприступные стены крепости, рассчитанные на многомесячные осады противником. А, на востоке и юге лежит широкая центральная площадь, полная торговцев и простых людей."
+        type: town
+        exits:
+            east: castle2
+            south: castle6
+            west: castle0
+
+    castle5:
+        name: "У крепостной стены"
+        desc: "Вы стоите перед небольшим квадратным зданием с толстыми стенами, на котором висит вывеска "банк". Путь на запад преграждают высокие неприступные стены крепости, рассчитанные на многомесячные осады противником. А, на востоке и юге лежит широкая центральная площадь, полная торговцев и простых людей."
+        type: town
+        exits:
+            east: castle6
+            north: castle0
+            south: castle10
+
+    castle0:
+        name: "Отделение банка"
+        desc: "Несмотря на некоторую удаленность крепости от города, в ней все же открыто представительство центрального банка. Тут, в небольшом квадратном помещении из крепких каменных стен, за несколькими столами клерки день и ночь подсчитывают прибыли и сводят дебет с кредитом. Они с радостью примут все ваши сбережения на хранение, но не предоставят никаких гарантий возврата денег при необходимости."
+        type: town
+        exits:
+            east: castle1
+            south: castle5
+
+    castle10:
+        name: "Около западных ворот"
+        desc: "Здесь, на узком участке между воротами крепости на западе и главной башней на востоке, все рассчитано на то, чтобы отражать нападение врага. В любой момент тут на головы может политься горящее масло или посыпаться камни, также из многочисленных бойниц в стенах может вылететь туча стрел."
+        type: town
+        exits:
+            north: castle5
+            south: castle15
+
+    castle15:
+        name: "У крепостной стены"
+        desc: "Путь на запад вам преграждают высокие неприступные стены крепости, защитники которой отбили не одно нападение врагов, поэтому лица встречающихся иногда гвардейцев выражают решимость и готовность дать отпор любому противнику. На востоке вы не замечаете ничего особенного, а на юге находится магазин повседневных товаров."
+        type: town
+        exits:
+            east: castle16
+            north: castle10
+            south: castle20
+
+    castle20:
+        name: "Лавка торговца"
+        desc: "Вы находитесь в небольшом слабоосвещенном помещении, где заезжий торговец разложил по прилавкам и полкам свой нехитрый товар. Хотя тут вряд ли найдешь что-нибудь диковинное, все эти вещи могут пригодиться в ваших странствиях и облегчить тяготы путешествия."
+        type: inside
+        exits:
+            north: castle15
+            east: castle21
+
+    castle16:
+        name: "Площадь у главной башни"
+        desc: "Тяжелые гранитные стены центральной башни этого замка тяжело вздымаются в небеса над вами. И хотя все здесь построено на века, долго находиться здесь как-то неуютно, не покидает ощущение, что вся эта громадина рухнет в любую минуту, похоронив вас под грудой обломков."
+        type: town
+        exits:
+            west: castle15
+            south: castle21
+
+    castle21:
+        name: "У крепостной стены"
+        desc: "Здесь, под защитой неприступных стен и храбрых гвардейцев, ощущаешь себя в полной безопасности и забываешь на время об опасностях этого мира: мошенниках в городе, разбойниках на дорогах и ужасных монстрах в лесах. Жаль, что надолго вам тут остаться никто не позволит."
+        type: town
+        exits:
+            east: castle22
+            north: castle16
+            west: castle20
+
+    castle22:
+        name: "Около южных ворот"
+        desc: "На севере, прямо перед вами возвышается огромная главная башня крепости, называемая донжоном. Если сравнивать крепость с живым организмом, то это, несомненно, ее сердце, где сосредоточены основные силы этого места. Площадь вокруг донжона продолжается на запад и восток, а на юге находятся массивные ворота."
+        type: town
+        exits:
+            east: castle23
+            north: castle17
+            west: castle21
+
+    castle23:
+        name: "У крепостной стены"
+        desc: "Тут центральная площадь крепости упирается на юге в высокие зубчатые стены, по которым снуют вооруженные луками и арбалетами дозорные. Как они взобрались туда, остается только гадать, так как нигде поблизости подъем наверх не виден, вероятно, он замаскирован из соображений большей безопасности."
+        type: town
+        exits:
+            east: castle22
+            north: castle18
+            west: castle24
+
+    castle18:
+        name: "Площадь у главной башни"
+        desc: "В этом месте центральная площадь башни ограничена с севера и запада стенами центральной башни крепости - донжона, неприступной громадой вздымающегося в небеса. С него, в случае необходимости, на вас в любой момент может политься горящее масло или посыпаться тяжелые булыжники защитников крепости."
+        type: town
+        exits:
+            east: castle19
+            south: castle23
+
+    castle24:
+        name: "Крепостная столовая"
+        desc: "Здесь, между южной и восточной крепостных стен в несколько рядов установлены длинные столы, за которыми обитатели крепости в короткие перерывы между дежурствами завтракают, обедают и ужинают. Рацион в крепостной столовой не особо разнообразный, но поддерживать посетителей в превосходной физической форме способен."
+        type: inside
+        exits:
+            west: castle23
+            north: castle19
+
+    castle19:
+        name: "У крепостной стены"
+        desc: "Вы находитесь на центральной площади крепости к югу от столовой, откуда, доносятся не слишком то приятные ароматы. Как бы то ни было, защитники крепости в прекрасной физической форме, значит подкрепиться там все-таки можно."
+        type: town
+        exits:
+            east: castle18
+            north: castle14
+            south: castle24
+
+    castle17:
+        name: "Приемный зал"
+        desc: "Вы зашли в просторный зал, низкий тяжелый потолок которого поддерживается рядом толстых колонн. Почти в самом центре зала установлен резной деревянный трон, на котором восседает во время приемов властитель этого замка. В северной стене зала вы замечаете дверь, ведущую во внутренние помещения башни, а на юге находится выход на площадь."
+        type: inside
+        exits:
+            south: castle22
+            north: castle12
+
+    castle12:
+        name: "Винтовая лестница"
+        desc: "Здесь проходит винтовая лестница, сложенная из массивных камней, вставленных в стены. Она ведет вниз, в казармы гвардейцев крепости, и вверх, в покои знати. Эта лестница освещается днем солнечным светом, бьющим сверху через специально проделанное для этих целей окошко в потолке, а ночью тут зажигают смердящие факелы."
+        type: inside
+        exits:
+            down: castle11
+            up: castle13
+
+    castle11:
+        name: "Казармы"
+        desc: "Это полуподвальное помещение специально приспособлено для отдыха гвардейцев этой крепости. Здесь в несколько рядов установлены двухъярусные кровати, между которыми стоят шкафчики и сундуки с личными вещами военнослужащих. Единственный выход отсюда ведет наверх через каменную винтовую лестницу."
+        type: inside
+        exits:
+            up: castle12
+
+    castle13:
+        name: "Второй этаж башни"
+        desc: "Вы находитесь в узком полутемном коридорчике между комнат, принадлежащих местной знати. Они обычно заперты на несколько замков, так как их владельцы больше всего на свете опасаются за сохранность своего имущества."
+        type: inside
+        exits:
+            down: castle12
