--- a/src/Rottenwood/UtopiaMudBundle/Resources/zones/medievaltown/rooms.yml
+++ b/src/Rottenwood/UtopiaMudBundle/Resources/zones/medievaltown/rooms.yml
@@ -40,7 +40,7 @@
 
 rooms:
     square:
-        name: "Городская площадь"
+        name: "Городская площадь123"
         desc: "Шумная городская площадь, жизнь на которой не затихает даже ночью. Западнее располагается рынок, а на другой стороне площади виднеется монументальная арка. В центре площади располагается фонтан, около которого горожане что-то бурно обсуждают. Улица отходит на север и юг."
         type: town
         exits:
