--- a/src/Rottenwood/UtopiaMudBundle/Resources/zones/medievaltown/rooms.yml
+++ b/src/Rottenwood/UtopiaMudBundle/Resources/zones/medievaltown/rooms.yml
@@ -328,7 +328,7 @@ rooms:
 
     castle1:
         name: "У крепостной стены"
-        desc: "Вы стоите перед небольшим квадратным зданием с толстыми стенами, на котором висит вывеска "банк". Путь на север преграждают высокие неприступные стены крепости, рассчитанные на многомесячные осады противником. А, на востоке и юге лежит широкая центральная площадь, полная торговцев и простых людей."
+        desc: "Вы стоите перед небольшим квадратным зданием с толстыми стенами, на котором висит вывеска банк. Путь на север преграждают высокие неприступные стены крепости, рассчитанные на многомесячные осады противником. А, на востоке и юге лежит широкая центральная площадь, полная торговцев и простых людей."
         type: town
         exits:
             east: castle2
@@ -337,7 +337,7 @@ rooms:
 
     castle5:
         name: "У крепостной стены"
-        desc: "Вы стоите перед небольшим квадратным зданием с толстыми стенами, на котором висит вывеска "банк". Путь на запад преграждают высокие неприступные стены крепости, рассчитанные на многомесячные осады противником. А, на востоке и юге лежит широкая центральная площадь, полная торговцев и простых людей."
+        desc: "Вы стоите перед небольшим квадратным зданием с толстыми стенами, на котором висит вывеска банк. Путь на запад преграждают высокие неприступные стены крепости, рассчитанные на многомесячные осады противником. А, на востоке и юге лежит широкая центральная площадь, полная торговцев и простых людей."
         type: town
         exits:
             east: castle6
