--- a/src/Rottenwood/UtopiaMudBundle/Resources/zones/medievaltown/rooms.yml
+++ b/src/Rottenwood/UtopiaMudBundle/Resources/zones/medievaltown/rooms.yml
@@ -452,6 +452,7 @@ rooms:
         exits:
             down: castle11
             up: castle13
+            south: castle17
 
     castle11:
         name: "Казармы"
