Зона для тестирования мобов - 'Городская канализация'

--- a/src/Rottenwood/UtopiaMudBundle/Resources/zones/medievaltown/rooms.yml
+++ b/src/Rottenwood/UtopiaMudBundle/Resources/zones/medievaltown/rooms.yml
@@ -199,6 +199,7 @@ rooms:
         exits:
             east: crossroads
             south: weststreet2
+            down: "sewersenter:sewers"
 
     weststreet2:
         name: "Западная улица"
