Создание npc-крысы #26

--- a/src/Rottenwood/UtopiaMudBundle/Resources/races/races.yml
+++ b/src/Rottenwood/UtopiaMudBundle/Resources/races/races.yml
@@ -117,3 +117,14 @@ races:
             - berserk
             - tear
             - hunt
+
+# NPC
+    rat:
+        name: крыса
+        namef: крыса
+        size: 2
+        ST: 2
+        DX: 4
+        IQ: 1
+        HT: 2
+        npconly: true
