--- a/src/Rottenwood/UtopiaMudBundle/Resources/zones/sewers/rooms.yml
+++ b/src/Rottenwood/UtopiaMudBundle/Resources/zones/sewers/rooms.yml
@@ -11,6 +11,8 @@ rooms:
         name: "Канализация"
         desc: "Вокруг только стены из замшелого булыжника и неприятный запах."
         type: inside
+        mobs:
+        - rat
         exits:
             up: sewersenter
             north: sewersn2
