Реализован парсер мобов из файла зон #26

--- a/src/Rottenwood/UtopiaMudBundle/Resources/zones/sewers/rooms.yml
+++ b/src/Rottenwood/UtopiaMudBundle/Resources/zones/sewers/rooms.yml
@@ -47,3 +47,26 @@ rooms:
         type: inside
         exits:
             east: sewers
+
+#################################################
+#                                               #
+#   Список мобов зоны "Городская Канализация"   #
+#                                               #
+#################################################
+
+mobs:
+    rat:
+        race: rat
+        name:
+        - крыса
+        - крысы
+        - крысе
+        - крысу
+        - крысой
+        - крысе
+        short: "Крупная черная крыса пробежала мимо."
+        desc: "Крупная крыса что-то высматривает маленькими и черными как ночь глазами."
+        ST: 4
+        DX: 12
+        IQ: 1
+        HT: 3
