Реализовано отображение мобов в комнате #26

--- a/src/Rottenwood/UtopiaMudBundle/Resources/zones/sewers/rooms.yml
+++ b/src/Rottenwood/UtopiaMudBundle/Resources/zones/sewers/rooms.yml
@@ -55,9 +55,9 @@ rooms:
 #################################################
 
 mobs:
-    rat:
-        race: rat
-        name:
+    rat:            # якорь
+        race: rat   # раса
+        name:       # обязательно все 6 падежей
         - крыса
         - крысы
         - крысе
