Реализация отображения множества мобов в комнатах #26

--- a/src/Rottenwood/UtopiaMudBundle/Resources/zones/sewers/rooms.yml
+++ b/src/Rottenwood/UtopiaMudBundle/Resources/zones/sewers/rooms.yml
@@ -13,6 +13,7 @@ rooms:
         type: inside
         mobs:
         - rat
+        - rat
         exits:
             up: sewersenter
             north: sewersn2
