--- a/zones/medievaltown/medievaltown.yml
+++ b/zones/medievaltown/medievaltown.yml
@@ -18,9 +18,9 @@
 #            - флаги
 #            - комнаты
 #            mobs:
-#            - мобы
-#            - рождающиеся
-#            - "в комнате"
+#            - имя первого моба (английский вариант)
+#            - имя второго моба (может совпадать с первым)
+#            - имя третьего моба
 #            items:
 #            - "предметы появляющиеся"
 #            - "в комнате, но не у мобов"
@@ -37,12 +37,17 @@
 #
 # Примечание:   если выход ведет в другую зону, всегда берите его в "кавычки".
 #               Это же справедливо и для названий, содержащих пробелы.
+#               
+#               НИКОГДА не используйте табуляцию (TAB), ВСЕГДА применяйте пробелы
+
 
 rooms:
     square:
         name: "Городская площадь"
         desc: "Шумная городская площадь, жизнь на которой не затихает даже ночью. Западнее располагается рынок, а на другой стороне площади виднеется монументальная арка. В центре площади располагается фонтан, около которого горожане что-то бурно обсуждают. Улица отходит на север и юг."
         type: town
+        mobs:
+        - citizen
         exits:
             north: street
             south: crossroads
@@ -468,3 +473,27 @@ rooms:
         type: inside
         exits:
             down: castle12
+
+###############################################
+#                                             #
+#   Список мобов зоны "Средневековый город"   #
+#                                             #
+###############################################
+
+mobs:
+    citizen:            # якорь
+        race: human     # раса
+        name:           # обязательно все 6 падежей
+        - горожанин
+        - горожанина
+        - горожанину
+        - горожанина
+        - горожанином
+        - горожанине
+        short: "Горожанин неспешно прогуливается по площади."
+        desc: "Житель города одет в свободные светлые одежды."
+        ST: 10
+        DX: 10
+        IQ: 10
+        HT: 10
+        
