--- a/zones/medievaltown/medievaltown.yml
+++ b/zones/medievaltown/medievaltown.yml
@@ -67,6 +67,8 @@ rooms:
         name: "Рынок"
         desc: "В переулке между массивными зданиями развернулась палаточная торговля. Торговцы всех мастей предлагают разнообразные товары всем имеющим набитый звонкими монетами кошелек."
         type: town
+        mobs:
+        - citizen2
         exits:
             east: square
             west: market1
@@ -161,6 +163,8 @@ rooms:
         name: "Городской парк"
         desc: "Здесь, в окружении стройных цветущих деревьев, царит покой и умиротворение, поэтому неудивительно, что городской парк является излюбленным местом отдыха горожан. Это место также служит домом для многочисленных птиц, звонкие трели которых доносятся со всех сторон, да мелких животных, попадающих иногда в поле зрения между кустов и с ветвей деревьев."
         type: town
+        mobs:
+        - citizen3
         exits:
             south: street2
             north: park2
@@ -496,4 +500,36 @@ mobs:
         DX: 10
         IQ: 10
         HT: 10
-        
+    
+    citizen2:            # якорь
+        race: human     # раса
+        name:           # обязательно все 6 падежей
+        - молодая горожанка
+        - молодой горожанки
+        - молодой горожанке
+        - молодую горожанку
+        - молодой горожанкой
+        - молодой горожанке
+        short: "Молодая горожанка проходит тут по своим делам."
+        desc: "Вы видите молодую женщину, одетую в простые белые одежды. Похоже она сильно спешит куда-то, так как совсем не обращает на вас внимания."
+        ST: 10
+        DX: 10
+        IQ: 10
+        HT: 10
+
+    citizen3:            # якорь
+        race: human     # раса
+        name:           # обязательно все 6 падежей
+        - маленький мальчик
+        - маленького мальчика
+        - маленькому мальчику
+        - маленького мальчика
+        - маленьким мальчиком
+        - маленьком мальчике
+        short: "Маленький мальчик бегает тут, играя во что-то."
+        desc: "Лицо этого мальчика очень чумазое, и ему уже давно пора умыться. Странно, что родители оставили мальчика надолго одного, без присмотра."
+        ST: 10
+        DX: 10
+        IQ: 10
+        HT: 10
+       
