--- a/zones/medievaltown/medievaltown.yml
+++ b/zones/medievaltown/medievaltown.yml
@@ -504,12 +504,12 @@ mobs:
     citizen2:            # якорь
         race: human     # раса
         name:           # обязательно все 6 падежей
-        - молодая горожанка
-        - молодой горожанки
-        - молодой горожанке
-        - молодую горожанку
-        - молодой горожанкой
-        - молодой горожанке
+        - "молодая горожанка"
+        - "молодой горожанки"
+        - "молодой горожанке"
+        - "молодую горожанку"
+        - "молодой горожанкой"
+        - "молодой горожанке"
         short: "Молодая горожанка проходит тут по своим делам."
         desc: "Вы видите молодую женщину, одетую в простые белые одежды. Похоже она сильно спешит куда-то, так как совсем не обращает на вас внимания."
         ST: 10
@@ -520,12 +520,12 @@ mobs:
     citizen3:            # якорь
         race: human     # раса
         name:           # обязательно все 6 падежей
-        - маленький мальчик
-        - маленького мальчика
-        - маленькому мальчику
-        - маленького мальчика
-        - маленьким мальчиком
-        - маленьком мальчике
+        - "маленький мальчик"
+        - "маленького мальчика"
+        - "маленькому мальчику"
+        - "маленького мальчика"
+        - "маленьким мальчиком"
+        - "маленьком мальчике"
         short: "Маленький мальчик бегает тут, играя во что-то."
         desc: "Лицо этого мальчика очень чумазое, и ему уже давно пора умыться. Странно, что родители оставили мальчика надолго одного, без присмотра."
         ST: 10
