--- a/zones/medievaltown/medievaltown.yml
+++ b/zones/medievaltown/medievaltown.yml
@@ -501,9 +501,9 @@ mobs:
         IQ: 10
         HT: 10
     
-    citizen2:            # якорь
-        race: human     # раса
-        name:           # обязательно все 6 падежей
+    citizen2:
+        race: human
+        name:
         - "молодая горожанка"
         - "молодой горожанки"
         - "молодой горожанке"
@@ -517,16 +517,16 @@ mobs:
         IQ: 10
         HT: 10
 
-    citizen3:            # якорь
-        race: human     # раса
-        name:           # обязательно все 6 падежей
+    citizen3:
+        race: human
+        name:
         - "маленький мальчик"
         - "маленького мальчика"
         - "маленькому мальчику"
         - "маленького мальчика"
         - "маленьким мальчиком"
         - "маленьком мальчике"
-        short: "Маленький мальчик бегает тут, играя во что-то. 123"
+        short: "Маленький мальчик бегает тут, играя во что-то."
         desc: "Лицо этого мальчика очень чумазое, и ему уже давно пора умыться. Странно, что родители оставили мальчика надолго одного, без присмотра."
         ST: 10
         DX: 10
