--- a/zones/medievaltown/medievaltown.yml
+++ b/zones/medievaltown/medievaltown.yml
@@ -526,7 +526,7 @@ mobs:
         - "маленького мальчика"
         - "маленьким мальчиком"
         - "маленьком мальчике"
-        short: "Маленький мальчик бегает тут, играя во что-то."
+        short: "Маленький мальчик бегает тут, играя во что-то. 1"
         desc: "Лицо этого мальчика очень чумазое, и ему уже давно пора умыться. Странно, что родители оставили мальчика надолго одного, без присмотра."
         ST: 10
         DX: 10
