Багфикс: импорт новых мобов

--- a/src/Rottenwood/UtopiaMudBundle/Resources/zones/sewers/rooms.yml
+++ b/src/Rottenwood/UtopiaMudBundle/Resources/zones/sewers/rooms.yml
@@ -13,7 +13,7 @@ rooms:
         type: inside
         mobs:
         - rat
-        - rat
+        - slime
         exits:
             up: sewersenter
             north: sewersn2
@@ -25,6 +25,8 @@ rooms:
         name: "Канализация"
         desc: "Вокруг только стены из замшелого булыжника и неприятный запах."
         type: inside
+        mobs:
+        - slime
         exits:
             south: sewers
 
@@ -32,6 +34,8 @@ rooms:
         name: "Канализация"
         desc: "Вокруг только стены из замшелого булыжника и неприятный запах."
         type: inside
+        mobs:
+        - slime
         exits:
             north: sewers
 
@@ -39,6 +43,8 @@ rooms:
         name: "Канализация"
         desc: "Вокруг только стены из замшелого булыжника и неприятный запах."
         type: inside
+        mobs:
+        - slime
         exits:
             west: sewers
 
@@ -46,6 +52,8 @@ rooms:
         name: "Канализация"
         desc: "Вокруг только стены из замшелого булыжника и неприятный запах."
         type: inside
+        mobs:
+        - slime
         exits:
             east: sewers
 
@@ -59,15 +67,31 @@ mobs:
     rat:            # якорь
         race: rat   # раса
         name:       # обязательно все 6 падежей
-        - крыса
-        - крысы
-        - крысе
-        - крысу
-        - крысой
-        - крысе
+        - "крыса"
+        - "крысы"
+        - "крысе"
+        - "крысу"
+        - "крысой"
+        - "крысе"
         short: "Крупная черная крыса пробежала мимо."
         desc: "Крупная крыса что-то высматривает маленькими и черными как ночь глазами."
         ST: 4
         DX: 12
         IQ: 1
         HT: 3
+
+    slime:
+        race: slime
+        name:
+        - "слизь"
+        - "слизи"
+        - "слизи"
+        - "слизь"
+        - "слизью"
+        - "слизи"
+        short: "Слизь мерзко растекается по каменному полу."
+        desc: "Склизкая, мерзкая, дурно пахнущая слизь."
+        ST: 2
+        DX: 5
+        IQ: 0
+        HT: 1
