Реализация открывания дверей #24

--- a/src/Rottenwood/UtopiaMudBundle/Resources/config/commands.yml
+++ b/src/Rottenwood/UtopiaMudBundle/Resources/config/commands.yml
@@ -90,3 +90,10 @@ commands:
         - кричать
         - крикнуть
         - орать
+
+    # открыть
+    open:
+        type: action
+        alias:
+        - open
+        - открыть
