Реализация закрывания дверей #24

--- a/src/Rottenwood/UtopiaMudBundle/Resources/config/commands.yml
+++ b/src/Rottenwood/UtopiaMudBundle/Resources/config/commands.yml
@@ -97,3 +97,10 @@ commands:
         alias:
         - open
         - открыть
+
+    # закрыть
+    close:
+        type: action
+        alias:
+        - close
+        - закрыть
