Поправлен композер.json

--- a/composer.json
+++ b/composer.json
@@ -54,7 +54,7 @@
     },
     "repositories": [
         {
-            "url": "https://github.com/Rottenwood/Thruway.git",
+            "url": "https://github.com/Rottenwood/UtopiaMud.git",
             "type": "git"
         }
     ],
