Дополнение в зоне 'канализация'

--- a/src/Rottenwood/UtopiaMudBundle/Resources/zones/sewers/rooms.yml
+++ b/src/Rottenwood/UtopiaMudBundle/Resources/zones/sewers/rooms.yml
@@ -50,7 +50,8 @@ rooms:
 
     sewersw2:
         name: "Канализация"
-        desc: "Вокруг только стены из замшелого булыжника и неприятный запах."
+        desc: "Вокруг только стены из замшелого булыжника и неприятный запах. Северную стену придерживает массивная
+        плита. Возможно за ней что-то есть?"
         type: inside
         exits:
             east: sewers
