добавлены двери в зоне

--- a/zones/medievaltown/medievaltown.yml
+++ b/zones/medievaltown/medievaltown.yml
@@ -126,15 +126,30 @@ rooms:
         exits:
             south: street
             north: street2
-            west: ratusha1
-            east: bank1
+            west: 
+                to: ratusha1
+                door: closed
+                doorname:
+                - "дверь"
+                - "дверь"
+            east: 
+                to: bank1
+                door: closed
+                doorname:
+                - "дверь"
+                - "дверь"
 
     ratusha1:
         name: "В здании ратуши"
         desc: "Вы находитесь на первом этаже городской ратуши, где немногочисленные клерки пытаются решить повседневные проблемы всех окрестных земель. Вы ловите на себе несколько недовольных взглядов, похоже посетителей здесь не любят и пытаются избавиться от них любыми способами. По широкой лестнице в дальнем конце зала можно попасть на второй этаж к бургомистру города."
         type: inside
         exits:
-            east: street1
+            east: 
+                to: street1
+                door: closed
+                doorname:
+                - "дверь"
+                - "дверь"
             up: ratusha2
 
     ratusha2:
@@ -149,7 +164,12 @@ rooms:
         desc: "Вы зашли через толстые дубовые двери, дополнительно обитые железными полосами, в массивное толстостенное здание центрального банка этого города. Ваш взгляд непроизвольно притягивает большая дверца сейфа, вделанного непосредственно в стену, где хранят свои сбережения более половины жителей этого города. Если бы кому-нибудь удалось украсть оттуда деньги, он бы стал богачом на всю свою оставшуюся жизнь."
         type: inside
         exits:
-            west: street1
+            west: 
+                to: street1
+                door: closed
+                doorname:
+                - "дверь"
+                - "дверь"
 
     street2:
         name: "Центральная улица"
@@ -225,7 +245,12 @@ rooms:
         exits:
             east: weststreet2
             west: weststreet4
-            south: house1
+            south: 
+            to: house1
+                door: closed
+                doorname:
+                - "дверь"
+                - "дверь"
 
     weststreet4:
         name: "Западная улица"
@@ -237,18 +262,28 @@ rooms:
 
     bridge:
         name: "Мост через ров"
-        desc: "Вы находитесь на узком деревянном мосту, поднимающемся в случае опасности. Внизу находится глубокий ров, заполненный грязной зловонной водой, очутившись в которой наверняка подхватишь какую-нибудь заразу. Сверху нависают две зубчатые башни, откуда в случае опасности для хозяев замка могут посыпаться тяжелые булыжники и политься горящее масло."
+        desc: "Вы находитесь около ворот замка на узком деревянном мосту, поднимающемся в случае опасности. Внизу находится глубокий ров, заполненный грязной зловонной водой, очутившись в которой наверняка подхватишь какую-нибудь заразу. Сверху нависают две зубчатые башни, откуда в случае опасности для хозяев замка могут посыпаться тяжелые булыжники и политься горящее масло."
         type: town
         exits:
             east: weststreet4
-            west: castle14
+            west: 
+                to: castle14
+                door: closed
+                doorname:
+                - "ворота"
+                - "ворота"
 
     house1:
         name: "Дом аристократа"
         desc: "Вы зашли в просторный дом местного аристократа, заслужившего право на это жилище годами безупречной военной службы. Несмотря на размеры дома, обстановка тут достаточно скудная и говорит о том, что хозяин либо не так богат, либо скряга. Также заметно как тут все тщательно прибрано и нигде не найти ни пылинки."
         type: town
         exits:
-            north: weststreet3
+            north: 
+            to: weststreet3
+                door: closed
+                doorname:
+                - "дверь"
+                - "дверь"
 
     eaststreet1:
         name: "Восточная улица"
@@ -256,21 +291,36 @@ rooms:
         type: town
         exits:
             west: crossroads
-            south: tavern
+            south: 
+                to: tavern
+                door: closed
+                doorname:
+                - "дверь"
+                - "дверь"
 
     tavern:
         name: "Таверна"
         desc: "Вы зашли в вонючую деревянную таверну, царящий здесь пьяный перегар собьет с ног любого даже самого крепкого человека. Видимо поэтому в таверне никто и не стоит прямо на ногах. Напротив входа, за барной стойкой можно найти тощего уродливого трактирщика, готового за ваши же деньги угостить вас какой-нибудь отравой."
         type: town
         exits:
-            north: eaststreet1
+            north: 
+                to: eaststreet1
+                door: closed
+                doorname:
+                - "дверь"
+                - "дверь"
 
     castle14:
         name: "Около восточных ворот"
         desc: "Здесь центральная площадь крепости окружающая главную башню продолжается на север и на юг, на востоке находятся окруженные сторожевыми башнями ворота в крепость, а на западе высокая стена глазеющая на вас многочисленными бойницами."
         type: town
         exits:
-            east: bridge
+            east: 
+                to: bridge
+                door: closed
+                doorname:
+                - "ворота"
+                - "ворота"
             north: castle9
             south: castle19
 
@@ -532,4 +582,3 @@ mobs:
         DX: 10
         IQ: 10
         HT: 10
-       
