--- a/zones/medievaltown/medievaltown.yml
+++ b/zones/medievaltown/medievaltown.yml
@@ -611,7 +611,7 @@ rooms:
 ###############################################
 
 mobs:
-    citizen:            # Якорь
+    citizen:            # якорь
         race: human     # раса
         name:           # обязательно все 6 падежей
         - "горожанин"
@@ -637,7 +637,7 @@ mobs:
         - "молодой горожанкой"
         - "молодой горожанке"
         short: "Молодая горожанка проходит тут по своим делам."
-        desc: "Вы видите молодую женщину, одетую в простые белые одежды. Похоже она сильно спешит куда-то, так как совсем не обращает на вас внимани¤."
+        desc: "Вы видите молодую женщину, одетую в простые белые одежды. Похоже она сильно спешит куда-то, так как совсем не обращает на вас внимания."
         ST: 10
         DX: 10
         IQ: 10
